full-moon/tests/cases/fail/parser/index-2/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cases/fail/parser/index-2
---
error[ast]: unexpected token `[`. [ (expected expression after `[`)
  ┌─ source.lua:1:2
  │
1 │ x[
  │  ^

error[ast]: unexpected token ``.  (unexpected expression when looking for a statement)
  ┌─ source.lua:1:3
  │
1 │ x[
  │   ^


